lab1/Test/L1-A-12-2.output
Error Type B at Line 3
Error Type B at Line 10
Error Type A at Line 14
Error Type B at Line 19
Error Type A at Line 44
