lab1/Test/L1-A-12-2.cmm
float ;
int wkI ( ) {
  while _pZIQmiLA )   return eNX3YgjOtnkE && _GY_ 
    == ih + vdNHNswhSu_mwATr2h * RAKPAMhU5hvF0u2D [ PxrVvtlZB6A 
    = htiAgjoL86 || gDQmrxIRUSpAX0AWc > Ym55cdCxuj - VLS 
    ( rxE && YdF2yD4LF <= sVER4qctQPDlVch / ! UTYed5ivfJk 
    [ nc9wtFkuJOV1teqk < ( m32GazjHq + ( R3QFes = _0u8 
    = BEdQbdaGsTPF3lOCk || N0cqL60 + zPHwgRi / YTeO [ 
    iTbtNijvnXYXwm && ! rrNI7fxVNknX ( fps0lsWzGIbktb0Y3x 
    , ) && ! tiu . RQVKJZ2iDUDR4V || jd3 ] ) / CRm34JrugpAohsxX 
    ) ] >= ! - - 1983238167 . _c6_VGIbJqw . g ) != 2047466401.1015876200 
    ] / ! - g6bpi6TyhWzPVIVe9u ( ) ;

}~
struct UOVzOKOqR3ki8X7UgQz YTNq8JLSakeXhTcY , _B 

;
struct x22 {
  int pkZWncSuCl , Nrvpmcfw0AYgK = ;
}Oqrk39Bs [ 1818155937 ] 
;
int ;
struct {
  struct yQx dHQFZFuNP ;
  struct _n30_2SS5 v95kE6QfeqM4 ;
};
int ;
struct tKPkkOoF3g ;
int hZld9D0o_tG 
;
int ;
int NFwa7 ( ) {
}
int eX6h71xi ( ) {
}
int rJE2599 ( int S3L8FcmsSctrJHX9S , int aVVX3cgDsvQqmUIc 
  ) {
}
int D5eQUv7VyFZArSQgMMjt ( int wCbvnFEfwfa9SDhD ) 
  {
  if ( E6IhaPrIBeX_ZE3IC )   r ;

}
int ;\
int IspQeLm ( ) {
{
    J4x8 ;
    mQniVaAaet8gw5 ;
    if ( d )     WuHXcBBP3KSA4rhMBEm ;
else     if ( rSXokyE_a2TTdXz )     if ( QUXLYXD ) 
          N5HMjcxeAIMo ;
else     V3n0SOakHjeNuKa6g1CD ;



  }}
